tests/cases/vectors/errors/vector-reserve-known-negative.ari
fn main() -> i64 {
  let capacity = -1;
  var values: Vec[i64] = [];
  values.reserve(capacity);
  return 0;
}
